kubernetes/apps/default/petkit-snapshotter/app/httproute-external.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: petkit-snapshotter-external
  namespace: default
  labels:
    app: petkit-snapshotter
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - petkit-snapshots.iacob.co.uk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: petkit-snapshotter
          port: 80
