kubernetes/apps/default/petkit-snapshotter/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: petkit-snapshotter
  namespace: default
  labels:
    app: petkit-snapshotter
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - petkit-snapshots.iacob.uk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: petkit-snapshotter
          port: 80
